# game-engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: CMakeLists.txt  boost.cmake  box2d.cmake  glew.cmake  glm.cmake  lua.cmake  pybind11.cmake  quill.cmake  rapidjson.cmake  sdl2.cmake  sdl2_image.cmake  sdl2_mixer.cmake  sdl2_ttf.cmake  tracy.cmake
shaders/: triangle.frag
src/: AudioManager.cpp  AudioManager.h  CMakeLists.txt  Client.cpp  Defines.h  GraphicsManager.cpp  GraphicsManager.h  Helper.h  InputEnumerators.h  InputManager.cpp  Logger.h  MapHelper.h  NetworkManager.cpp  NetworkManager.h  NetworkMessage.cpp  NetworkMessage.h  PythonScriptingBackend.cpp  PythonScriptingBackend.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  ScriptRef.h  ScriptingBackend.h  Server.cpp  Server.h  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  main.cpp
src/App/: CMakeLists.txt
src/App/src/: Client.cpp  main.cpp
src/Audio/: CMakeLists.txt
src/Audio/include/: AudioHelper.h
src/Core/: CMakeLists.txt
src/Graphics/: CMakeLists.txt
src/Graphics/include/: Texture.h
src/Graphics/src/: Shader.cpp
src/Input/: CMakeLists.txt
src/Input/include/: InputManager.h
src/Network/: CMakeLists.txt
src/Network/include/: NetworkMessage.h
src/Network/src/: NetworkManager.cpp  NetworkMessage.cpp
src/Networking/: NetworkManager.cpp  NetworkManager.h
src/Resource/: CMakeLists.txt
src/Scene/: CMakeLists.txt
src/Scene/include/: EngineComponents.h
src/Scripting/: CMakeLists.txt
src/Scripting/include/: LuaScriptingBackend.h
src/Scripting/src/: LuaScriptingBackend.cpp
test_games/physics/resources/actor_templates/: KinematicBox.template:Zone.Identifier
test_games/python_rectangle/resources/: game.config  rendering.config
test_games/python_rectangle/resources/component_types/: RectangleRenderer.py
test_games/python_rectangle/resources/scenes/: basic.scene
test_games/shootem/resources/audio/: mission_start_vocal.wav:Zone.Identifier
test_games/shootem_python/resources/: game.config
test_games/shootem_python/resources/actor_templates/: Enemy.template  Projectile.template
test_games/shootem_python/resources/component_types/: ConstantMovement.py  Donna.py  DonnaAnimation.py  Enemy.py  GameManager.py  Hud.py  KeyboardControl.py  MovingBackground.py  PlayAudio.py  Projectile.py  SpriteRenderer.py  Transform.py  game_state.py
test_games/shootem_python/resources/scenes/: basic.scene
